--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,10 +30,10 @@ section.intro {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 120vh;
+  height: 1100px;
 }
 section.intro .content{
-  padding: 270px 550px;
+  padding: 270px 0;
 }
 section.intro .content h1{
   font-size: 74px;
@@ -58,7 +58,9 @@ section.intro .content button{
   letter-spacing: 0.2px;
   font-weight: 400;
 }
-
+section.features {
+  margin-top: 126px;
+}
 section.features .content h2{
   font-size: 48px;
   font-weight: 400;
@@ -95,7 +97,8 @@ section.features .content .feature-card{
   padding-right: 3.5rem;
 }
 section.features .content .video{
-  margin-top: 132px;
+  margin: 132px auto 0 auto;
+  display: block;
 }
 section.features .content iframe{
   filter: drop-shadow(0px 8.14769px 63.1446px rgba(0, 0, 0, 0.15));
@@ -208,7 +211,6 @@ section.partners h4{
   line-height: 40px;
   letter-spacing: 0.2px;
   margin-bottom: 90px;
-  padding: 0 360px;
 }
 section.partners .list-partner{
   display: flex;
@@ -253,7 +255,7 @@ section.testimonials h2{
   margin-bottom: 90px;
 }
 section.testimonials .brand{
-  margin-bottom: 60px;
+  margin: 0 0 60px 0;
 }
 section.testimonials h4{
   font-size: 28px;
@@ -416,7 +418,6 @@ section.contact-us h4{
   line-height: 40px;
   letter-spacing: 0.2px;
   margin-bottom: 90px;
-  padding: 0 360px;
 }
 section.contact-us .contact-us-form{
   display: flex;
@@ -541,6 +542,54 @@ footer .social-media{
 }
 footer .right{
   padding-left: 100px;
+}
+@media (min-width: 1000px) { 
+  section.intro {
+    height: 750px;
+  }
+  section.intro .content{
+    padding: 160px 0 !important;
+  }
+  footer {
+    padding: 150px 50px;
+  }
+}
+@media (min-width: 1200px) { 
+  section.features .content .video{
+    width: 874px;
+    height: 408px;
+  }
+    footer {
+      padding: 150px 150px;
+    }
+  }
+}
+@media (min-width: 1400px) { 
+  section.intro {
+    height: 850px;
+  }
+  section.intro .content{
+    padding: 160px 0 !important;
+  }
+  section.features .content .video{
+    width: 1074px;
+    height: 558px;
+  }
+  footer {
+    padding: 150px 250px;
+  }
+}
+@media (min-width: 1600px) { 
+  section.intro {
+    height: 1000px;
+  }
+  section.intro .content{
+    padding: 270px 0 !important;
+  }
+  section.features .content .video{
+    width: 1174px;
+    height: 658px;
+  }
 }
 
 
